[package]
name = "cvdate"
version = "1.1.0"
authors = ["jimi <wining151@qq.com>"]
edition = "2018"
description = "A tiny datetime and timestamp conversion tool."
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jimi151/cvdate"
keywords = ["date", "time","timestamp","timezone"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
