[package]
name = "cvdate"
version = "1.1.4"
authors = ["jimi <wining151@qq.com>"]
edition = "2018"
description = "A tiny datetime and timestamp conversion tool."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jimi151"
documentation = "https://docs.rs/cvdate/1.1.4/cvdate/"
repository = "https://github.com/jimi151/cvdate"
keywords = ["date", "time","timestamp","timezone"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
