[package]
name = "cvdate"
version = "1.1.8"
authors = ["jimi <wining151@qq.com>"]
edition = "2018"
description = "A tiny datetime week clender and timestamp conversion tool."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jimi151"
documentation = "https://docs.rs/cvdate/1.1.8/cvdate/"
repository = "https://github.com/jimi151/cvdate"
keywords = ["datetime","timestamp","week","timezone","clender"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
